tests/fail/delete_clone.stderr
tests/fail/delete_clone.tk:6:19: error[E0406]: Cannot implicitly copy value of type 'TcpStream' because its 'clone' method is explicitly deleted (= delete)
tests/fail/delete_clone.tk:6:19: error[E0406]: Cannot implicitly copy value of type 'TcpStream' because its 'clone' method is explicitly deleted (= delete)
